Fix ticker spacing

--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -41,6 +41,10 @@
   margin-left: 2em;
 }
 
+.ticker * {
+  margin-right: 0.4em;
+}
+
 .content {
   display: flex;
   justify-content: space-between;
